# amortization

./: .gitignore  Cargo.toml  README.md  test.sh
src/: cli.rs  gtk.rs  lib.rs  main.rs
